tests/fsharp/typecheck/overloads/neg_System.Convert.ToString.OverloadList.bsl

neg_System.Convert.ToString.OverloadList.fsx(1,1,1,31): typecheck error FS0041: No overloads match for method 'ToString'.

Known types of arguments: char * int

Available overloads:
 - System.Convert.ToString(value: System.DateTime, provider: System.IFormatProvider) : string // Argument 'value' doesn't match
 - System.Convert.ToString(value: bool, provider: System.IFormatProvider) : string // Argument 'value' doesn't match
 - System.Convert.ToString(value: byte, provider: System.IFormatProvider) : string // Argument 'value' doesn't match
 - System.Convert.ToString(value: byte, toBase: int) : string // Argument 'value' doesn't match
 - System.Convert.ToString(value: char, provider: System.IFormatProvider) : string // Argument 'provider' doesn't match
 - System.Convert.ToString(value: decimal, provider: System.IFormatProvider) : string // Argument 'provider' doesn't match
 - System.Convert.ToString(value: float, provider: System.IFormatProvider) : string // Argument 'value' doesn't match
 - System.Convert.ToString(value: float32, provider: System.IFormatProvider) : string // Argument 'value' doesn't match
 - System.Convert.ToString(value: int, provider: System.IFormatProvider) : string // Argument 'value' doesn't match
 - System.Convert.ToString(value: int, toBase: int) : string // Argument 'value' doesn't match
 - System.Convert.ToString(value: int16, provider: System.IFormatProvider) : string // Argument 'value' doesn't match
 - System.Convert.ToString(value: int16, toBase: int) : string // Argument 'value' doesn't match
 - System.Convert.ToString(value: int64, provider: System.IFormatProvider) : string // Argument 'value' doesn't match
 - System.Convert.ToString(value: int64, toBase: int) : string // Argument 'value' doesn't match
 - System.Convert.ToString(value: obj, provider: System.IFormatProvider) : string // Argument 'provider' doesn't match
 - System.Convert.ToString(value: sbyte, provider: System.IFormatProvider) : string // Argument 'value' doesn't match
 - System.Convert.ToString(value: string, provider: System.IFormatProvider) : string // Argument 'value' doesn't match
 - System.Convert.ToString(value: uint16, provider: System.IFormatProvider) : string // Argument 'value' doesn't match
 - System.Convert.ToString(value: uint32, provider: System.IFormatProvider) : string // Argument 'value' doesn't match
 - System.Convert.ToString(value: uint64, provider: System.IFormatProvider) : string // Argument 'value' doesn't match

neg_System.Convert.ToString.OverloadList.fsx(2,1,2,47): typecheck error FS0041: No overloads match for method 'ToString'.

Known types of arguments: provider: char * value: int

Available overloads:
 - System.Convert.ToString(value: System.DateTime, provider: System.IFormatProvider) : string // Argument 'value' doesn't match
 - System.Convert.ToString(value: bool, provider: System.IFormatProvider) : string // Argument 'value' doesn't match
 - System.Convert.ToString(value: byte, provider: System.IFormatProvider) : string // Argument 'value' doesn't match
 - System.Convert.ToString(value: char, provider: System.IFormatProvider) : string // Argument 'value' doesn't match
 - System.Convert.ToString(value: decimal, provider: System.IFormatProvider) : string // Argument 'provider' doesn't match
 - System.Convert.ToString(value: float, provider: System.IFormatProvider) : string // Argument 'provider' doesn't match
 - System.Convert.ToString(value: float32, provider: System.IFormatProvider) : string // Argument 'value' doesn't match
 - System.Convert.ToString(value: int, provider: System.IFormatProvider) : string // Argument 'provider' doesn't match
 - System.Convert.ToString(value: int16, provider: System.IFormatProvider) : string // Argument 'value' doesn't match
 - System.Convert.ToString(value: int64, provider: System.IFormatProvider) : string // Argument 'provider' doesn't match
 - System.Convert.ToString(value: obj, provider: System.IFormatProvider) : string // Argument 'provider' doesn't match
 - System.Convert.ToString(value: sbyte, provider: System.IFormatProvider) : string // Argument 'value' doesn't match
 - System.Convert.ToString(value: string, provider: System.IFormatProvider) : string // Argument 'value' doesn't match
 - System.Convert.ToString(value: uint16, provider: System.IFormatProvider) : string // Argument 'value' doesn't match
 - System.Convert.ToString(value: uint32, provider: System.IFormatProvider) : string // Argument 'value' doesn't match
 - System.Convert.ToString(value: uint64, provider: System.IFormatProvider) : string // Argument 'value' doesn't match
