tests/fsharp/typecheck/overloads/neg_System.Convert.ToString.OverloadList.fsx
System.Convert.ToString('a',0) |> ignore
System.Convert.ToString(provider='a', value=0) |> ignore
System.Convert.ToString(provider=null, value=0) |> ignore
;;